--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         $("h2").css("padding", "3px 20px");
         
         //###Step 6
-        $("h2").css("borderTopRightRadius", "5px"); $("h2").css("borderBottomLeftRadius", "5px");
+        $("h2").css({"borderTopRightRadius", "5px", "borderBottomLeftRadius", "5px");
         
         //###Step 7
         $("h2").css("backgroundColor", "#DFE3E6");
